internal/suites/example/kube/authelia/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: authelia
  labels:
    app: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      containers:
        - name: authelia
          image: authelia:dist
          ports:
            - containerPort: 443
          volumeMounts:
            - name: config-volume
              mountPath: /etc/authelia
            - name: ssl-volume
              mountPath: /var/lib/authelia/ssl
            - name: secrets
              mountPath: /usr/app/secrets
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: authelia-config
            items:
              - key: configuration.yml
                path: configuration.yml
        - name: ssl-volume
          configMap:
            name: authelia-ssl
            items:
              - key: cert.pem
                path: cert.pem
              - key: key.pem
                path: key.pem
        - name: secrets
          secret:
            secretName: authelia
            items:
              - key: jwt_secret
                path: jwt_secret
              - key: session
                path: session
              - key: sql_password
                path: sql_password
              - key: ldap_password
                path: ldap_password
