internal/suites/example/kube/authelia/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: authelia-service
  namespace: authelia
spec:
  selector:
    app: authelia
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
...
