internal/suites/example/kube/authelia/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: authelia-ingress
  namespace: authelia
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - secretName: authelia-tls
    hosts:
    - login.example.com
  rules:
  - host: login.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: authelia-service
          servicePort: 443
